Agregue un parrafo en RamaNuevisima

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Desafio GRIDS</title>
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore minima a earum. Voluptate deserunt quos possimus at ex quod totam!
+    </p>
+    <nav>
+        <link rel="stylesheet" href="LINK2">
+        <link rel="stylesheet" href="LINK1">
+    </nav>
     <div class="container">
         <div class="Header">
             <h2>Club Atletico River Plate</h2>
